# Vibe_Synapse

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
model/: gui_input.rs  gui_popup.rs
src/: error.rs  lib.rs  main.rs  model_list.rs
src/core/: context.rs  event.rs  mod.rs  plugin.rs
src/model/simple_gui/: mod.rs
src/runtime/: app.rs  mod.rs  plugin_manager.rs
