[package]
name = "vibe_synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
# 框架核心不依赖外部crate，模块可选择性引入依赖
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# GUI演示模块依赖
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"  # 添加GDI支持 for WHITE_BRUSH, GetStockObject
] }

# 用于时间戳显示
chrono = "0.4"

[[bin]]
name = "vibe_synapse"
path = "src/main.rs"
