[package]
name = "vibe_synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
# 框架核心依赖
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# 自动注册插件系统
inventory = "0.3"

# GUI模块依赖 - 使用 egui
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
winit = "0.29"  # Required for event_loop_builder configuration
tracing-subscriber = "0.3"
tracing = "0.1"

[[bin]]
name = "vibe_synapse"
path = "src/main.rs"
