[package]
name = "vibe_synapse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Vibe_Synapse Contributors"]
repository = "https://github.com/yourusername/vibe_synapse"
description = "A minimalist, decoupled modular framework for Rust"

[dependencies]
# 框架核心依赖
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# 自动注册插件系统
inventory = "0.3"

# GUI模块依赖 - 使用 egui
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
winit = "0.29"  # Required for event_loop_builder configuration

# 日志和跟踪
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 错误处理增强
anyhow = { version = "1.0", optional = true }

[[bin]]
name = "vibe_synapse"
path = "src/main.rs"
